--- a/index.html
+++ b/index.html
@@ -308,11 +308,11 @@
             </p>
 
             <div class="flex flex-col sm:flex-row items-center justify-center gap-4 pt-8">
-                <button
+                <a href="https://calendly.com/techvorysolutions/agnes-ai" target="_blank"
                     class="px-10 py-5 rounded-full font-bold text-xl border-2 border-black/10 dark:border-white/10 hover:bg-black/5 dark:hover:bg-white/5 transition-colors flex items-center gap-3 group text-black dark:text-white">
                     Hire Your Agent <i data-lucide="arrow-right"
                         class="w-6 h-6 group-hover:translate-x-1 transition-transform"></i>
-                </button>
+                </a>
             </div>
         </div>
     </header>
@@ -535,7 +535,7 @@
                             </div>
                         </div>
                         <div class="lg:col-span-2 space-y-6">
-                            <div class="grid grid-cols-3 gap-4">
+                            <div class="grid grid-cols-1 sm:grid-cols-3 gap-4">
                                 <div class="bg-white p-5 rounded-2xl border border-slate-100 shadow-sm">
                                     <i data-lucide="wallet" class="w-5 h-5 text-slate-400 mb-2"></i>
                                     <div class="text-[10px] text-slate-400 uppercase font-bold tracking-wide">Budget
@@ -640,23 +640,64 @@
         </div>
     </section>
 
-    <footer class="py-24 px-6 border-t border-border bg-background relative overflow-hidden">
+    <footer class="py-12 border-t border-border bg-background relative overflow-hidden">
         <div
             class="absolute bottom-0 left-1/2 -translate-x-1/2 w-[600px] h-[300px] bg-accent/5 rounded-full blur-[100px] pointer-events-none">
         </div>
-        <div class="max-w-4xl mx-auto text-center space-y-8 relative z-10">
+
+        <div class="max-w-4xl mx-auto text-center space-y-8 relative z-10 px-6">
             <h2 class="text-4xl md:text-6xl font-bold tracking-tight">
                 Ready to <span class="text-gradient">Automate Growth?</span>
             </h2>
             <div class="flex flex-col sm:flex-row justify-center gap-6 pt-4">
-                <button style="background-color: var(--btn-bg); color: var(--btn-text);"
-                    class="px-10 py-4 rounded-full font-bold text-lg hover:scale-105 transition-transform shadow-lg border-4 border-white/20 dark:border-white/20">
+                <a href="https://calendly.com/techvorysolutions/agnes-ai" target="_blank"
+                    style="background-color: var(--btn-bg); color: var(--btn-text);"
+                    class="px-10 py-4 rounded-full font-bold text-lg hover:scale-105 transition-transform shadow-lg border-4 border-white/20 dark:border-white/20 inline-block">
                     Get Started Now
-                </button>
+                </a>
             </div>
-            <p class="text-sm text-muted pt-16">
-                © 2026 BrokerAI. Designed for the Future of Real Estate.
-            </p>
+        </div>
+
+        <!-- Contact Information -->
+        <div class="w-full border-t border-border mt-12 pt-12 relative z-10">
+            <div class="max-w-6xl mx-auto px-6 grid md:grid-cols-3 gap-8 text-center md:text-left">
+                <div class="space-y-3">
+                    <h4
+                        class="text-lg font-bold text-black dark:text-white flex items-center justify-center md:justify-start gap-2">
+                        <i data-lucide="phone" class="w-5 h-5 text-accent"></i> Contact Us
+                    </h4>
+                    <div class="space-y-1 text-muted text-sm pl-0 md:pl-7">
+                        <p><a href="tel:+919566792784" class="hover:text-accent transition-colors">+91 9566792784</a>
+                        </p>
+                        <p><a href="tel:+919205529228" class="hover:text-accent transition-colors">+91 9205529228</a>
+                        </p>
+                        <p><a href="tel:+919451672228" class="hover:text-accent transition-colors">+91 9451672228</a>
+                        </p>
+                    </div>
+                </div>
+                <div class="space-y-3">
+                    <h4
+                        class="text-lg font-bold text-black dark:text-white flex items-center justify-center md:justify-start gap-2">
+                        <i data-lucide="mail" class="w-5 h-5 text-accent"></i> Email
+                    </h4>
+                    <div class="space-y-1 text-muted text-sm pl-0 md:pl-7">
+                        <a href="mailto:techvorysolutions@gmail.com"
+                            class="hover:text-accent transition-colors">techvorysolutions@gmail.com</a>
+                    </div>
+                </div>
+                <div class="space-y-3">
+                    <h4
+                        class="text-lg font-bold text-black dark:text-white flex items-center justify-center md:justify-start gap-2">
+                        <i data-lucide="globe" class="w-5 h-5 text-accent"></i> Website
+                    </h4>
+                    <div class="space-y-1 text-muted text-sm pl-0 md:pl-7">
+                        <a href="https://www.agnes.techvory.in" target="_blank"
+                            class="hover:text-accent transition-colors">www.agnes.techvory.in</a>
+                    </div>
+                </div>
+            </div>
+
+
         </div>
     </footer>
 
